升级依赖版本；兼容jdk11；兼容MySQL8；灵活的配置文件，支持*全部，xx*某某开头，*xx某某结尾